# protocore

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: broker.h  heart_beat.h  logger.h  memory_pool.h  message_queue.h  msg.h  protocore.h  state_manager.h  task.h
include/msg/: base_msg.h  declare_msg.h  msg.h  msg_traits.h  msg_variant_types_default.h  msg_varient_types.h  system_msgs.h
include/task/: task.h  task_state.h
src/: heart_beat.cpp  logger.cpp  memory_pool.cpp  message_queue.cpp  state_manager.cpp  task.cpp
test/: CMakeLists.txt  test_broker.cpp  test_heartbeat.cpp  test_logger.cpp  test_memory_pool.cpp  test_msg.cpp  test_queue.cpp  test_state_manager.cpp  test_task.cpp
